canvas first styled, all physics and controller working fine

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="stylesheets/styles.css" />
   </head>
   <body>
-    <canvas id="canvas" width="700" height="1200"></canvas>
+    <div class="canvas__div">
+      <canvas id="canvas" width="970" height="470"></canvas>
+    </div>
 
     <script src="javascript/chronometer.js"></script>
     <script src="javascript/main.js"></script>
+    <script src="javascript/controller.js"></script>
   </body>
 </html>
