Agregados comentarios, aun con problemas en plataformas para las replicas

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="stylesheets/styles.css" />
   </head>
   <body>
-    <div class="canvas__div">
-      <canvas id="canvas" width="970" height="470"></canvas>
-    </div>
+    <canvas id="canvas" width="970" height="470"></canvas>
+    <div class="canvas__div"></div>
 
     <script src="javascript/chronometer.js"></script>
     <script src="javascript/main.js"></script>
