problema de interracion con barras cerca de soluionarse (presenta algunos bugs), enfoque analizando colisiones de personaje contra plataformas

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="stylesheets/styles.css" />
   </head>
   <body>
-    <canvas id="canvas" width="970" height="470"></canvas>
-    <div class="canvas__div"></div>
+    <div class="canvas__div">
+      <canvas id="canvas" width="970" height="470"></canvas>
+    </div>
 
     <script src="javascript/chronometer.js"></script>
     <script src="javascript/main.js"></script>
